--- a/app/static/css/pages/agenda/agenda-base.css
+++ b/app/static/css/pages/agenda/agenda-base.css
@@ -286,6 +286,9 @@
 	align-items: flex-end;
 	margin: 20px auto;
 	max-width: 100%;
+	position: relative;
+	z-index: 100;
+	overflow: visible !important;
 }
 
 .action-bar-left,
@@ -298,6 +301,7 @@
 	font-size: 0.9em;
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
+	overflow: visible !important;
 }
 
 .action-bar-right {
