--- a/app/static/css/pages/agenda/agenda-mobile.css
+++ b/app/static/css/pages/agenda/agenda-mobile.css
@@ -90,6 +90,7 @@
     align-items: center;
     gap: 15px;
     width: 100%;
+    overflow: visible !important;
   }
 
   .action-bar-left #meeting-filter {
