--- a/app/static/css/core/navigation.css
+++ b/app/static/css/core/navigation.css
@@ -305,6 +305,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
     padding: 10px 15px;
     color: white;
     text-decoration: none;
